--- a/index.html
+++ b/index.html
@@ -70,11 +70,10 @@
           in Manhattan. I generated two sets of embeddings, from physical
           features
           <span class="small-brackets"
-            >[ building density, height, lot area, year built, etc ]</span
+            >[building density, height, lot area, year built, etc]</span
           >
           and semantic data
-          <span class="small-brackets"
-            >[ place types, names, reviews, etc ]</span
+          <span class="small-brackets">[place types, names, reviews, etc]</span
           >. I then clustered the block embeddings with k-means and visualized
           each cluster as a network layer. The resulting interactive web map
           enables users to explore and compare the semantic and spatial topology
