--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link
       rel="icon"
-      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><text y='52' font-size='52'>𖣔</text></svg>"
+      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><text y='52' font-size='52'>🏙️</text></svg>"
     />
     <link rel="stylesheet" href="style.css" />
     <link
@@ -51,6 +51,10 @@
           >
           <label
             ><input type="checkbox" id="invertLayers" /> Invert Layers</label
+          >
+          <label
+            ><input type="checkbox" id="rotateMap" checked /> Auto Rotate
+            Map</label
           >
         </div>
         <div class="slider-group">
